update to Dart 3.0

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,7 +4,10 @@ version: 0.1.0
 publish_to: none
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dev_dependencies:
-  endare_lints: ^1.0.0
+  endare_lints:
+    git: 
+      url: https://github.com/Endare/endare_lints
+      ref: 1.1.0
