--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: endare_lints
 description: Recommended lints for Flutter & Dart projects tailored to the Endare BVBA code style guide.
 repository: https://github.com/Endare/endare_lints
-version: 1.1.0
+version: 1.2.0
+publish_to: none # Intended only as a git dependency.
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
