--- a/lib/endare_lints.yaml
+++ b/lib/endare_lints.yaml
@@ -22,6 +22,7 @@ linter:
     avoid_unused_constructor_parameters: false # Too opinionated.
     cancel_subscriptions: true
     close_sinks: true
+    comment_references: true # Helps with unresolved doc symbols.
     conditional_uri_does_not_exist: true
     directives_ordering: true
     join_return_with_assignment: false # Too opinionated.
